# mac-broker

./: .gitignore  CMakeLists.txt  build.gradle.kts  settings.gradle.kts
gradle/wrapper/: gradle-wrapper.properties
native/: CmakeLists.txt  build.sh
native/scripts/: build-java-bridge.sh
native/src/: Mac.m  MacBrokerBridge.m  Msal4JRuntimeWindowController.m  Msal4JTokenExchange.m  main.m
native/src/headers/: MacBrokerBridge.h  Msal4JRuntimeWindowController.h  Msal4JTokenExchange.h  Msal4JTokenSet.h  module.modulemap
native/src/samples/: ExchangeCodeForTokens.m  ExchangeCodeForTokensDefault.m  ExchangeCodeForTokensSelectAccount.m  ReceiveAuthCode.m  SampleAuthCommon.h
native/src/swift/: MacBrokerBridge.swift
src/main/java/com/microsoft/aad/msal4j/: MacBroker.java  Main.java
src/main/java/com/microsoft/aad/msal4j/runtime/: MsalMacAccount.java  MsalMacAccountHandle.java  MsalMacAsyncHandle.java  MsalMacAuthParameters.java  MsalMacAuthParametersHandle.java  MsalMacAuthResult.java  MsalMacAuthResultHandle.java  MsalMacCallbacks.java  MsalMacError.java  MsalMacErrorHandle.java  MsalMacErrorHelper.java  MsalMacHandleBase.java  MsalMacReadAccountResult.java  MsalMacReadAccountResultHandle.java  MsalMacRuntimeFuture.java  MsalMacRuntimeInterop.java  MsalMacRuntimeLibrary.java  MsalMacRuntimeResponseStatus.java  MsalMacSignOutResult.java  MsalMacSignOutResultHandle.java
